demo-web/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: demo-web
  labels: { app: "demo-web" }
spec:
  replicas: 3
  selector:
    matchLabels: { app: "demo-web" }
  strategy:
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
    type: RollingUpdate
  template:
    metadata:
      labels: { app: "demo-web" }
    spec:
      restartPolicy: Always
      volumes:
      - name: config
        configMap: { name: demo-web }
      - name: logs
        hostPath: { path: "/data/logs/demo-web", type: "DirectoryOrCreate" }
      - name: app-data
        persistentVolumeClaim: { claimName: "cp01" }
      containers:
      - name: demo-web
        image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/demo-web:master-0.1.0
        # IfNotPresent, Always, Never
        imagePullPolicy: "IfNotPresent"
        #resources:
        #  requests: { cpu: "200m", memory: "128Mi" }
        #  limits: { cpu: "500m", memory: "256Mi" }
        livenessProbe:
          # HTTP Status >= 200 and < 400
          httpGet: { path: "/healthz", port: 5030 }
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - { name: config, mountPath: /home/d2jvkpn/demo-web/configs } # not /home/d2jvkpn/demo-web/configs/dev.yaml
        - { name: logs, subPathExpr: "$(POD_NAME)", mountPath: "/home/d2jvkpn/demo-web/logs" }
        # - { name: "app-data", subPathExpr: "demo-web/data/$(POD_NAME)", mountPath: "/home/d2jvkpn/demo-web/data" }
        ports:
        - { name: "http", containerPort: 5030, protocol: "TCP" }
        # command: [ tail, -f, /etc/hosts ]
        command: [ "./main" ]
        args: [ "--addr=:5030", "--release", "--config=configs/dev.yaml"]
